fix body overflow

--- a/GSoC2019/src/css/forced3.css
+++ b/GSoC2019/src/css/forced3.css
@@ -1,3 +1,7 @@
+body{
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
 .visualization{
 	position: absolute;
 }
